# agora-erp

./: .gitattributes  .gitignore  README.md  railway.json  render.yaml
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_tenants_users_rls.py  0002_products_stock_sales_rls.py  0003_refresh_tokens_rls.py  0004_customers_rls.py  0005_invoices_rls.py  0006_ledger_entries_rls.py  0007_licenses_and_plan_expiry.py  0008_admin_config.py
backend/app/: main.py
backend/app/core/: config.py  security.py
backend/app/db/: base.py  rls.py  session.py
backend/app/modules/accounting/: models.py  router.py  schemas.py  service.py
backend/app/modules/auth/: models.py  router.py  schemas.py  service.py
backend/app/modules/billing/: deps.py  models.py  router.py  schemas.py  service.py
backend/app/modules/customers/: models.py  router.py  schemas.py  service.py
backend/app/modules/invoices/: models.py  router.py  schemas.py  service.py
backend/app/modules/products/: models.py  router.py  schemas.py  service.py  voice_ai.py
backend/app/modules/reports/: router.py  schemas.py  service.py
backend/app/modules/sales/: models.py  router.py  schemas.py  service.py
backend/app/modules/tenants/: models.py
backend/app/modules/users/: models.py  router.py  schemas.py
backend/app/shared/: deps.py  errors.py  ids.py
backend/app/sync/: router.py  schemas.py  service.py
backend/scripts/: backup_db.sh  seed.py
backend/tests/: test_config.py  test_health.py  test_security.py  test_voice_ai.py
backend/tests/integration/: conftest.py  test_auth_flow.py  test_business_modules.py  test_customers.py  test_inventory.py  test_isolation.py  test_refresh_revocation.py  test_subscription_gate.py  test_sync.py
docs/: 00_Indice.md  01_Vision_Producto.md  02_Modelo_Negocio.md  03_Especificacion_Funcional.md  04_Base_Datos.md  05_API.md  06_Backend.md  07_App_Movil.md  08_Panel_Web.md  09_Seguridad.md  10_MVP.md  11_Pruebas.md  12_Despliegue.md  13_Oferta_Comercial.md  14_Bitacora_Proceso.md  15_Manual_Usuario.md  volante_agora.html
infra/: Dockerfile.backend  docker-compose.prod.yml  docker-compose.yml
mobile/: README.md  analysis_options.yaml  demo.dart  demo_seeder_test.dart  main.dart  pubspec.yaml
web/: .env.example  (+6 more)
(+93 files in other folders)
